--- a/doc/references.bib
+++ b/doc/references.bib
@@ -211,3 +211,45 @@
 	year={2011},
 	publisher={Wiley Online Library}
 }
+
+@article{o2011open,
+	title={Open Babel: An open chemical toolbox},
+	author={O'Boyle, Noel M and Banck, Michael and James, Craig A and Morley, Chris and Vandermeersch, Tim and Hutchison, Geoffrey R},
+	journal={Journal of cheminformatics},
+	volume={3},
+	number={1},
+	pages={33},
+	year={2011},
+	publisher={Nature Publishing Group}
+}
+
+@article{morris2009autodock4,
+	title={AutoDock4 and AutoDockTools4: Automated docking with selective receptor flexibility},
+	author={Morris, Garrett M and Huey, Ruth and Lindstrom, William and Sanner, Michel F and Belew, Richard K and Goodsell, David S and Olson, Arthur J},
+	journal={Journal of computational chemistry},
+	volume={30},
+	number={16},
+	pages={2785--2791},
+	year={2009},
+	publisher={Wiley Online Library}
+}
+
+@article{DEAP_JMLR2012,
+	author    = " F\'elix-Antoine Fortin and Fran\c{c}ois-Michel {De Rainville} and Marc-Andr\'e Gardner and Marc Parizeau and Christian Gagn\'e ",
+	title     = { {DEAP}: Evolutionary Algorithms Made Easy },
+	pages     = { 2171--2175 },
+	volume    = { 13 },
+	month     = { jul },
+	year      = { 2012 },
+	journal   = { Journal of Machine Learning Research }
+}
+
+@article{maaten2008visualizing,
+	title={Visualizing data using t-SNE},
+	author={Maaten, Laurens van der and Hinton, Geoffrey},
+	journal={Journal of machine learning research},
+	volume={9},
+	number={Nov},
+	pages={2579--2605},
+	year={2008}
+}
